@@ -36,6 +36,8 @@
 #define GRUB_UINT8_5_TRAILINGBITS 0x1f
 #define GRUB_UINT8_6_TRAILINGBITS 0x3f
 
+#define GRUB_MAX_UTF8_PER_UTF16 4
+
 #define GRUB_UCS2_LIMIT 0x10000
 #define GRUB_UTF16_UPPER_SURROGATE(code) \
   (0xD800 + ((((code) - GRUB_UCS2_LIMIT) >> 12) & 0xfff))
